--- a/style.css
+++ b/style.css
@@ -449,6 +449,7 @@ body .content .greeting h2 {
     width:70% !important;
     margin: 2rem auto;
     padding: 2rem;
+    padding-top: 100px;
 }
 
 .contact-form-container h2 {
